@@ -1517,7 +1517,9 @@ int rpmRunTransactions(	rpmTransactionSet ts,
     int i, j;
     int ourrc = 0;
     struct availablePackage * alp;
+#ifdef	DYING
     Header * hdrs;
+#endif
     int totalFileCount = 0;
     hashTable ht;
     TFI_t fi;
@@ -1615,7 +1617,9 @@ int rpmRunTransactions(	rpmTransactionSet ts,
 	if (dip) ts->di[i].bsize = 0;
     }
 
+#ifdef	DYING
     hdrs = alloca(sizeof(*hdrs) * ts->addedPackages.size);
+#endif
 
     /* ===============================================
      * For packages being installed:
@@ -1709,13 +1713,21 @@ int rpmRunTransactions(	rpmTransactionSet ts,
 	    fi->record = 0;
 	    loadFi(fi->ap->h, fi);
 	    if (fi->fc == 0) {
+#ifdef	DYING
 		hdrs[i] = headerLink(fi->h);
+#endif
 		continue;
 	    }
 
 	    /* Allocate file actions (and initialize to FA_UNKNOWN) */
 	    fi->actions = xcalloc(fi->fc, sizeof(*fi->actions));
+#ifdef	DYING
 	    hdrs[i] = relocateFileList(ts, fi, fi->ap, fi->h, fi->actions);
+#else
+	    {   Header foo = relocateFileList(ts, fi, fi->ap, fi->h, fi->actions);
+		foo = headerFree(foo);
+	    }
+#endif
 
 	    /* Skip netshared paths, not our i18n files, and excluded docs */
 	    skipFiles(ts, fi);
@@ -1946,6 +1958,7 @@ int rpmRunTransactions(	rpmTransactionSet ts,
     {
 	*newProbs = ts->probs;
 
+#ifdef	DYING
 	for (alp = ts->addedPackages.list, fi = ts->flList;
 		(alp - ts->addedPackages.list) < ts->addedPackages.size;
 		alp++, fi++)
@@ -1953,6 +1966,7 @@ int rpmRunTransactions(	rpmTransactionSet ts,
 	    hdrs[alp - ts->addedPackages.list] =
 		headerFree(hdrs[alp - ts->addedPackages.list]);
 	}
+#endif
 
 	ts->flList = freeFl(ts, ts->flList);
 	ts->flEntries = 0;
@@ -1987,6 +2001,7 @@ int rpmRunTransactions(	rpmTransactionSet ts,
     lastFailed = -2;	/* erased packages have -1 */
     tsi = tsInitIterator(ts);
     while ((fi = tsNextIterator(tsi)) != NULL) {
+	Header h;
 	int gotfd;
 
 	gotfd = 0;
@@ -1998,14 +2013,18 @@ int rpmRunTransactions(	rpmTransactionSet ts,
 assert(alp == fi->ap);
 	    i = alp - ts->addedPackages.list;
 
+	    h = headerLink(fi->h);
 	    if (alp->fd == NULL) {
 		alp->fd = ts->notify(fi->h, RPMCALLBACK_INST_OPEN_FILE, 0, 0,
 			    alp->key, ts->notifyData);
 		if (alp->fd) {
-		    Header h;
 		    rpmRC rpmrc;
 
+#ifdef	DYING
 		    hdrs[i] = headerFree(hdrs[i]);
+#else
+		    h = headerFree(h);
+#endif
 		    /*@-mustmod@*/	/* LCL: segfault */
 		    rpmrc = rpmReadPackageHeader(alp->fd, &h, NULL, NULL, NULL);
 		    /*@=mustmod@*/
@@ -2015,8 +2034,15 @@ assert(alp == fi->ap);
 			alp->fd = NULL;
 			ourrc++;
 		    } else {
+#ifdef	DYING
 			hdrs[i] = relocateFileList(ts, fi, alp, h, NULL);
 			h = headerFree(h);
+#else
+			Header foo = relocateFileList(ts, fi, alp, h, NULL);
+			h = headerFree(h);
+			h = headerLink(foo);
+			foo = headerFree(foo);
+#endif
 		    }
 		    if (alp->fd) gotfd = 1;
 		}
@@ -2029,7 +2055,11 @@ assert(alp == fi->ap);
 		    hsave = headerLink(fi->h);
 		    fi->h = headerFree(fi->h);
 		}
+#ifdef	DYING
 		fi->h = headerLink(hdrs[i]);
+#else
+		fi->h = headerLink(h);
+#endif
 		if (alp->multiLib)
 		    ts->transFlags |= RPMTRANS_FLAG_MULTILIB;
 
@@ -2048,7 +2078,11 @@ assert(alp == fi->ap);
 		lastFailed = i;
 	    }
 
+#ifdef	DYING
 	    hdrs[i] = headerFree(hdrs[i]);
+#else
+	    h = headerFree(h);
+#endif
 
 	    if (gotfd) {
 		(void)ts->notify(fi->h, RPMCALLBACK_INST_CLOSE_FILE, 0, 0,
